# family-budget

./: .flake8  .gitignore  README.MD  alembic.ini  pyproject.toml  run.py
app/: __init__.py  config.py  utils.py
app/domain/: adapters.py
app/domain/models/: __init__.py  output_models.py
app/domain/ports/: api_ports.py  spi_ports.py
app/domain/services/: budget_services.py  transaction_services.py  user_services.py
app/drivers/graphql/: __init__.py  resolvers.py  schemas.py
app/infra/database/: __init__.py  repos.py  tables.py
deploy/: docker-compose.yml
deploy/app-docker/: Dockerfile
deploy/db-docker/: Dockerfile  entrypoint.sh  setup.sql  wait-for-db.sh
deploy/migrations/: env.py
deploy/migrations/versions/: 7d0252e2e6fc_add_base_tables.py  c74799250b38_add_user_to_budget_table.py
deploy/mssql-express-docker/: Dockerfile
tests/: test_utils.py
tests/domain_tests/: conftest.py  test_budget_services.py  test_models.py  test_transaction_services.py
