[tool.poetry]
name = "family-budget"
version = "0.1.0"
description = ""
authors = ["DanielKusyDev <daniel.kusy97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.2"
uvicorn = "^0.19.0"
SQLAlchemy = "^1.4.42"
pyodbc = "^4.0.34"
icontract = "^2.6.2"
strawberry-graphql = "^0.138.1"
bcrypt = "^4.0.1"
PyJWT = "^2.6.0"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
pytz = "^2022.6"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
pytest = "^7.2.0"
alembic = "^1.8.1"
coverage = "^6.5.0"
Faker = "^15.1.1"

[tool.black]
line-length = 120
target-version = ['py310']
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.pytest.ini_options]
asyncio_mode = 'auto'
testpaths = [
    'tests'
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
